--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="d-flex justify-content-center justify-content-lg-end">
                         <div class="profile-image-container">
                             <div class="profile-circle-bg"></div>
-                            <img src="/images/square-photo.jpg" alt="Priyanshi Prateek" class="profile-image">
+                            <img src="./images/square-photo.jpg" alt="Priyanshi Prateek" class="profile-image">
                         </div>
                     </div>
                 </div>
