--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div class="d-flex justify-content-center justify-content-lg-end">
                         <div class="profile-image-container">
                             <div class="profile-circle-bg"></div>
-                            <img src="./images/square-photo.jpg" alt="Priyanshi Prateek" class="profile-image">
+                            <img src="images/square-photo.jpg" alt="Priyanshi Prateek" class="profile-image">
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                     <div class="ps-card">
                         <div class="ps-card-content">
                             <h3 class="ps-title mb-3">P.S.</h3>
-                            <p class="ps-text mb-0">I love 🎮 🧋<br>&amp; Chicken 🍔</p>
+                            <p class="ps-text mb-0">I love 🫐🧋<br>&amp; Chicken 🍔</p>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <div class="college-image-container">
                             <div class="college-circle-bg"></div>
-                            <img src="/images/college-image.jpg" alt="College Image" class="college-image">
+                            <img src="images/college-image.jpg" alt="College Image" class="college-image">
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="d-flex justify-content-center justify-content-lg-end">
                         <div class="work-image-container">
                             <div class="work-circle-bg"></div>
-                            <img src="/images/office.webp" alt="College Image" class="work-image">
+                            <img src="images/office.webp" alt="College Image" class="work-image">
                         </div>
                     </div>
                 </div>
